Enkele cosmetische issues in de code opgelost

--- a/Basisextractie_HTML_plannen.ipynb
+++ b/Basisextractie_HTML_plannen.ipynb
@@ -73,11 +73,11 @@
       },
       "outputs": [],
       "source": [
-        "werkmap = \"/content/gdrive/Shareddrives/BMC D&D: Data en Technologie/Interne opdrachten/Basisscripts HTML-omgevingsplannen/\"\n",
+        "# Voor hier de geprefereerde werkmap in\n",
         "\n",
-        "resultaten_map = os.path.join(werkmap, \"Resultaten\")\n",
+        "werkmap = \"\"\n",
         "\n",
-        "controle_map = os.path.join(werkmap, \"Controle\")"
+        "resultaten_map = os.path.join(werkmap, \"Resultaten\")"
       ]
     },
     {
@@ -288,10 +288,8 @@
       },
       "outputs": [],
       "source": [
-        "# @title\n",
-        "parse_plans = {''\n",
-        "    \"Test HTML\": {\"Code\": \"NL.IMRO.0307.BP00070-0303\"}\n",
-        "}"
+        "# Voer hier de te parsen plannen in in onderstaand format\n",
+        "parse_plans  = {'Naam HTML' {\"Code\" : \"IMRO Code\" }}"
       ]
     },
     {
@@ -326,13 +324,10 @@
         }
       ],
       "source": [
-        "# @title\n",
-        "base_link =  'https://www.amersfoort.nl/ro-online/'\n",
+        "# Voer hier de link naar het archief in\n",
+        "base_link =  ''\n",
         "\n",
-        "extract_regels_dict = maak_dict_met_te_parsen_htmls_per_IMRO(parse_plans, base_link)\n",
-        "\n",
-        "# Ovrride extract_regels_dict voor demonstartiedoeleinden\n",
-        "extract_regels_dict = {'NL.IMRO.0307.BP00070-0303' : ['https://www.amersfoort.nl/ro-online/NL.IMRO.0307.BP00070-0303/r_NL.IMRO.0307.BP00070-0303_2.10.html']}"
+        "extract_regels_dict = maak_dict_met_te_parsen_htmls_per_IMRO(parse_plans, base_link)"
       ]
     },
     {
@@ -996,7 +991,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhSvlp/wpmx+mwXf/jtd6t",
+      "authorship_tag": "ABX9TyOaaWN3jSEie8BsyE5jHg3z",
       "include_colab_link": true
     },
     "kernelspec": {
