Gemaakt met Colab

--- a/Basisextractie_HTML_plannen.ipynb
+++ b/Basisextractie_HTML_plannen.ipynb
@@ -986,12 +986,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(os.path.join(resultaten_map, 'parse_dict_per_IMRO_html.json'), 'w') as parse_dict_writer:\n",
+        "\n",
+        "  parse_dict_writer.write(json.dumps(parse_dict_per_IMRO))"
+      ],
+      "metadata": {
+        "id": "BXJkyXfRNRbn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaaWN3jSEie8BsyE5jHg3z",
+      "authorship_tag": "ABX9TyO61Guuq8N4BaBPmUI/amZ0",
       "include_colab_link": true
     },
     "kernelspec": {
